<resources>
    <string name="app_name">ALC 4.0</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="version">4.0</string>
    <string name="android_track">Android Track: #1</string>
    <string name="andela">Andela</string>
    <string name="skip"><![CDATA[Skip  >>]]></string>
    <string name="alc">ALC</string>
    <string name="andela_logo">Andela Logo</string>
    <string name="a">A</string>
    <string name="my_profile">My Profile</string>
    <string name="about_alc">About ALC</string>
    <string name="about_app">About App</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="action_settings">Settings</string>
    <string name="hint">hint</string>
    <string name="todo">TODO</string>
    <string name="sample_text">Sample Text</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="e_p_i_c">e.P.i.C</string>
    <string name="my_name">Breimer</string>
    <string name="slack_username">Slack Username</string>
    <string name="phone">+254 725124606</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">brymher@gmail.com</string>
    <string name="email_label">Email</string>
    <string name="country">Kenya</string>
    <string name="country_label">Country</string>
    <string name="track">Android</string>
    <string name="track_label">Track</string>
    <string name="name">Name</string>
    <string name="full_name">Breimer Radido John</string>
</resources>
