<?xml version="1.0" encoding="utf-8" ?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:elevation="20dp"
        android:padding="10dp"
        android:background="@drawable/background"
        android:id="@+id/about_dialog"
        android:layout_width="match_parent"
        android:layout_height="400dp">

    <com.github.abdularis.civ.CircleImageView
            android:src="@drawable/profile"
            android:elevation="60dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:strokeWidth="4dp"
            app:strokeColor="#A8000000"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            android:layout_marginBottom="196dp"
            android:id="@+id/circleImageView"
            app:layout_constraintHorizontal_bias="0.246"/>

    <android.support.constraint.ConstraintLayout

            android:padding="4dp"
            android:elevation="40dp"
            android:layout_width="0dp"
            android:layout_height="240dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/constraintLayout"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp">
        <android.support.v7.widget.CardView
                android:elevation="8dp"
                android:layout_width="0dp"
                android:backgroundTint="#A8000000"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent">

            <android.support.constraint.ConstraintLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView13"
                        app:layout_constraintTop_toTopOf="@+id/textView12"
                        app:layout_constraintStart_toEndOf="@+id/textView12" android:layout_marginStart="10dp"
                        android:textColor="@color/textColor"/>

                <TextView
                        android:text="@string/name"
                        android:layout_width="110dp"
                        android:textColor="@color/textColor"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView12"
                        android:layout_marginTop="42dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="10dp"/>
                <TextView
                        android:text="@string/track_label"
                        android:textColor="@color/textColor"
                        android:layout_width="110dp"
                        android:layout_height="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/textView3" android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView12"/>
                <TextView
                        android:text="@string/track"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:textColor="@color/textColor"
                        android:id="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/textView3"
                        android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView13"/>
                <TextView
                        android:text="@string/country_label"
                        android:textColor="@color/textColor"
                        android:layout_width="110dp"
                        android:layout_height="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/textView4" app:layout_constraintTop_toBottomOf="@+id/textView3"
                        android:layout_marginTop="8dp" android:layout_marginStart="10dp"/>
                <TextView
                        android:text="@string/country"
                        android:textColor="@color/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:id="@+id/textView5" android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
                <TextView
                        android:text="@string/email_label"
                        android:layout_width="110dp"
                        android:layout_height="20dp"
                        android:textColor="@color/textColor"
                        android:id="@+id/textView6" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"/>
                <TextView
                        android:text="@string/email"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:textColor="@color/textColor"
                        android:id="@+id/textView7" android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"/>
                <TextView
                        android:textColor="@color/textColor"
                        android:text="@string/phone_number"
                        android:layout_width="110dp"
                        android:layout_height="20dp"
                        android:id="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                        android:layout_marginStart="10dp"/>
                <TextView
                        android:text="@string/phone"
                        android:textColor="@color/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:id="@+id/textView9"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView7"/>
                <TextView
                        android:textColor="@color/textColor"
                        android:text="@string/slack_username"
                        android:layout_width="110dp"
                        android:layout_height="20dp"
                        android:id="@+id/textView10" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView8"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"/>
                <TextView
                        android:text="@string/my_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:id="@+id/textView11" android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@+id/textView10" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView9"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>