<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:theme="@style/AppTheme.Dialog"
        android:layout_width="400dp"
        android:layout_height="200dp">
    <LinearLayout
            android:layout_height="50dp"
            android:padding="4dp"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linearLayout2"
            android:orientation="horizontal">
        <ImageView
                android:layout_marginStart="20dp"
                android:src="@drawable/andela"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/andela_logo"/>

        <TextView
                android:paddingTop="8dp"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:text="@string/edit_profile"
                android:id="@+id/profile_edit_title"
                android:layout_width="300dp"
                android:layout_height="40dp"/>
    </LinearLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/constraintLayout2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
        <TextView
                android:paddingTop="10dp"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:id="@+id/edit_item_name"
                android:layout_marginStart="8dp"/>

        <EditText
                android:id="@+id/edit_item"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edit_item_name"
                app:layout_constraintStart_toEndOf="@+id/edit_item_name"
                android:layout_marginStart="8dp"/>
        <Button
                android:textColor="@color/textColor"
                android:padding="4dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/cancel"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_detail"
                app:layout_constraintEnd_toStartOf="@+id/save_detail"
                app:layout_constraintBottom_toBottomOf="@+id/save_detail"
                app:layout_constraintTop_toTopOf="@+id/save_detail"/>
        <Button
                android:textColor="@color/textColor"
                android:padding="4dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_detail"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/edit_item"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>