<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="Welcome To ALC 4.0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="48dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textSize="32sp"
            android:textAlignment="center" android:textStyle="italic" android:textColor="@color/colorPrimary"/>
    <android.support.constraint.ConstraintLayout
            android:elevation="4dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">
        <Button
                android:text="@string/about_alc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/about_alc" android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.504" android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textColor="@color/textColor"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"/>
        <Button
                android:text="@string/my_profile"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/about_alc"
                app:layout_constraintEnd_toEndOf="@+id/about_alc"
                app:layout_constraintStart_toStartOf="@+id/about_alc"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"/>

    </android.support.constraint.ConstraintLayout>

    <ImageView
            android:elevation="2dp"
            android:id="@+id/android_be"
            android:src="@drawable/android_better"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/todo"
            android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>