<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/alc_group_blur"
        tools:context=".SplashScreen">
    <android.support.constraint.ConstraintLayout
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackOverlay">
        <ImageView
                android:id="@+id/bar"
                android:layout_height="0dp"
                android:src="@drawable/bar"
                android:layout_width="18dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toTopOf="@+id/andela_name"
                android:layout_marginTop="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/an"
                android:layout_marginStart="8dp"/>
        <ImageView
                android:id="@+id/an"
                android:layout_height="40dp"
                android:src="@drawable/andela"
                android:layout_width="40dp"
                app:layout_constraintTop_toTopOf="@+id/bar" android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/google"
                android:id="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/bar"
                android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/an"/>
        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/pluralsight"
                android:id="@+id/imageView3" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/bar"
                android:layout_marginEnd="8dp" android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="@+id/bar"/>
        <RelativeLayout
                android:layout_width="314dp"
                android:layout_height="289dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/bar"
                app:layout_constraintTop_toTopOf="@+id/bar">
            <TextView
                    android:text="@string/alc"
                    android:textSize="140sp"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alc"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="0dp" android:layout_marginTop="-1dp"
                    android:layout_alignParentTop="true"/>
            <TextView
                    android:text="@string/version"
                    android:textSize="40sp"
                    android:textColor="#ffffff"
                    android:elevation="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/version"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="42dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="164dp"/>
            <TextView
                    android:text="@string/android_track"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="6dp"
                    android:textColor="#ffffff"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/track"
                    android:layout_marginBottom="61dp"/>
            <ImageView
                    android:layout_width="105dp"
                    android:layout_height="86dp"
                    app:srcCompat="@drawable/android_better"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="42dp"
                    android:layout_alignParentBottom="true" android:id="@+id/imageView4"
                    android:layout_marginBottom="25dp"/>
        </RelativeLayout>

        <TextView
                android:id="@+id/andela_name"
                android:textSize="120sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/andela"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="500dp" android:textAlignment="center"
        />
        <TextView
                android:textSize="18sp"
                android:id="@+id/count_down"
                android:layout_width="wrap_content"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:background="#2C000000"
                app:layout_constraintTop_toBottomOf="@+id/andela_name"
                app:layout_constraintVertical_bias="0.384"/>
        <Button
                android:text="@string/skip"
                android:layout_width="wrap_content"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:id="@+id/skip"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/andela_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="40dp"
                android:elevation="10dp"
                android:background="#68000000"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>